Fix bug where task name is truncated when resizing window

--- a/src/main/resources/view/HarmoniaTheme.css
+++ b/src/main/resources/view/HarmoniaTheme.css
@@ -381,9 +381,6 @@
 #priority {
     -fx-hgap: 7;
     -fx-vgap: 3;
-}
-
-#priority .label {
     -fx-text-fill: white;
     -fx-background-color: #727272;
     -fx-padding: 1 3 1 3;
